# m

./: Cargo.toml
assets/shaders/: fire.wgsl
dump/: camera_stuff.rs
src/: game.rs  main.rs  render.rs  storage.rs
src/game/: ui.rs
src/game/ui/: character_creation.rs  character_selection.rs  main_menu.rs  settings_menu.rs  ui_playground.rs
src/shaders/: common.wgsl
src/storage/: saves.rs  settings.rs
