[package]
name = "m"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.74"
bevy = "0.11.2"
bevy-ui-navigation = "0.28.0"
bevy_egui = "0.21.0"
platform-dirs = "0.3.0"
serde = { version = "1.0.183", features = ["derive"] }
toml = "0.7.6"
strum = "0.25.0"
strum_macros = "0.25.2"
phf = { version = "0.11.2", features = ["macros"] }
bincode = "1.3.3"
dialog = "0.3.0"
futures-lite = "1.13.0"
